Refactor billing retry & cancellation; add tests
Extracted and cleaned up retry/payment handling in BillingRetryServiceImpl into focused helper methods to improve readability and error handling. Reworked cancelSubscription in CustomerSubscriptionServiceImpl to centralize voiding invoices, refund calculation, and customer status updates; added helper methods and improved payment-method error messages. Removed numerous debug printlns across AuthServiceImpl, AuthController, BillingScheduler, and CustomerServiceImpl; introduced constants for repeated messages and tightened validations (phone regex). Replaced Collectors.toList() with toList(), updated exception usage to CustomException.notFound where appropriate, and improved currency symbol handling in SupportServiceImpl. Added a new NotificationControllerTest and several controller/service test adjustments (including new cancellation request tests), and changed many test classes to package-private. Overall: cleanup, refactor, small validation tweaks, and expanded test coverage.